--- a/BhashaX.ipynb
+++ b/BhashaX.ipynb
@@ -124,16 +124,11 @@
         "id": "WFu6ATjglTxm"
       },
       "source": [
-        "file1 = open(\"file.py.hien\", \"w\")  # write mode\n",
-        "file1.write(\"\")\n",
-        "file1.close()\n",
-        "\n",
-        "file = open('file.py.hien', 'a')\n",
-        "file.write('%अगर \"१\" %में \"१२३४५६७८९०\": \\n')\n",
-        "file.write('  @दिखाए(\"हाँ\") \\n')\n",
-        "file.write('%अन्यथा: \\n')\n",
-        "file.write('  @दिखाए(\"नहीं\") \\n')\n",
-        "file.close()"
+        "%%writefile file.py.hien\", \"w\")  # write mode\n",
+        "%अगर \"१\" %में \"१२३४५६७८९०\": \\n\n",
+        "  @दिखाए(\"हाँ\") \\n\n",
+        "%अन्यथा: \\n\n",
+        "  @दिखाए(\"नहीं\") \\n\n",
       ],
       "execution_count": 2,
       "outputs": []
