--- a/BhashaX.ipynb
+++ b/BhashaX.ipynb
@@ -5,9 +5,7 @@
     "colab": {
       "name": "BhashaX.ipynb",
       "provenance": [],
-      "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOULa/+ggvsmFxS935I1XC3",
-      "include_colab_link": true
+      "collapsed_sections": []
     },
     "kernelspec": {
       "name": "python3",
@@ -18,16 +16,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/krishyadav007/BhashaX/blob/main/BhashaX.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -59,7 +47,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tFMdJa_IhlSI",
-        "outputId": "c17d4152-dc66-4b10-e128-48f3a5a868a4"
+        "outputId": "53c76b2e-28e6-4baa-c131-e118b9e54df3"
       },
       "source": [
         "!wget https://github.com/krishyadav007/BhashaX/raw/main/Download/compiler\n",
@@ -69,29 +57,30 @@
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "--2021-06-12 17:15:02--  https://github.com/krishyadav007/BhashaX/raw/main/Download/compiler\n",
-            "Resolving github.com (github.com)... 140.82.113.3\n",
-            "Connecting to github.com (github.com)|140.82.113.3|:443... connected.\n",
+            "--2021-09-03 15:04:38--  https://github.com/krishyadav007/BhashaX/raw/main/Download/compiler\n",
+            "Resolving github.com (github.com)... 140.82.114.3\n",
+            "Connecting to github.com (github.com)|140.82.114.3|:443... connected.\n",
             "HTTP request sent, awaiting response... 302 Found\n",
             "Location: https://raw.githubusercontent.com/krishyadav007/BhashaX/main/Download/compiler [following]\n",
-            "--2021-06-12 17:15:02--  https://raw.githubusercontent.com/krishyadav007/BhashaX/main/Download/compiler\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.109.133, 185.199.108.133, 185.199.111.133, ...\n",
-            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.109.133|:443... connected.\n",
+            "--2021-09-03 15:04:39--  https://raw.githubusercontent.com/krishyadav007/BhashaX/main/Download/compiler\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 9668832 (9.2M) [application/octet-stream]\n",
             "Saving to: ‘compiler’\n",
             "\n",
-            "compiler            100%[===================>]   9.22M  23.0MB/s    in 0.4s    \n",
+            "compiler            100%[===================>]   9.22M  --.-KB/s    in 0.08s   \n",
             "\n",
-            "2021-06-12 17:15:03 (23.0 MB/s) - ‘compiler’ saved [9668832/9668832]\n",
+            "2021-09-03 15:04:39 (113 MB/s) - ‘compiler’ saved [9668832/9668832]\n",
             "\n",
-            "--2021-06-12 17:15:03--  https://github.com/krishyadav007/BhashaX/raw/main/ENV/ENV.json\n",
-            "Resolving github.com (github.com)... 140.82.113.3\n",
-            "Connecting to github.com (github.com)|140.82.113.3|:443... connected.\n",
+            "--2021-09-03 15:04:39--  https://github.com/krishyadav007/BhashaX/raw/main/ENV/ENV.json\n",
+            "Resolving github.com (github.com)... 140.82.114.3\n",
+            "Connecting to github.com (github.com)|140.82.114.3|:443... connected.\n",
             "HTTP request sent, awaiting response... 302 Found\n",
             "Location: https://raw.githubusercontent.com/krishyadav007/BhashaX/main/ENV/ENV.json [following]\n",
-            "--2021-06-12 17:15:03--  https://raw.githubusercontent.com/krishyadav007/BhashaX/main/ENV/ENV.json\n",
+            "--2021-09-03 15:04:39--  https://raw.githubusercontent.com/krishyadav007/BhashaX/main/ENV/ENV.json\n",
             "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
             "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
@@ -100,10 +89,9 @@
             "\n",
             "ENV.json            100%[===================>]   4.26K  --.-KB/s    in 0s      \n",
             "\n",
-            "2021-06-12 17:15:03 (48.1 MB/s) - ‘ENV.json’ saved [4363/4363]\n",
+            "2021-09-03 15:04:39 (48.9 MB/s) - ‘ENV.json’ saved [4363/4363]\n",
             "\n"
-          ],
-          "name": "stdout"
+          ]
         }
       ]
     },
@@ -121,22 +109,30 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "WFu6ATjglTxm"
+        "id": "WFu6ATjglTxm",
+        "outputId": "59a55c07-9ad4-4515-9cda-84ab07653a15",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "file1 = open(\"file.py.hien\", \"w\")  # write mode\n",
-        "file1.write(\"\")\n",
-        "file1.close()\n",
+        "%%writefile file.py.hien\n",
         "\n",
-        "file = open('file.py.hien', 'a')\n",
-        "file.write('%अगर \"१\" %में \"१२३४५६७८९०\": \\n')\n",
-        "file.write('  @दिखाए(\"हाँ\") \\n')\n",
-        "file.write('%अन्यथा: \\n')\n",
-        "file.write('  @दिखाए(\"नहीं\") \\n')\n",
-        "file.close()"
+        "%अगर \"१\" %में \"१२३४५६७८९०\":\n",
+        "  @दिखाए(\"हाँ\")\n",
+        "%अन्यथा:\n",
+        "  @दिखाए(\"नहीं\")"
       ],
       "execution_count": 2,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Writing file.py.hien\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -154,7 +150,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KxIDfVACpjP1",
-        "outputId": "fe1c0de8-ee06-4825-c239-a54781d6305f"
+        "outputId": "e1a5f4c7-dcfd-43a4-aa9a-be1641d3e0ac"
       },
       "source": [
         "!chmod +x compiler\n",
@@ -164,12 +160,23 @@
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "हाँ\n"
-          ],
-          "name": "stdout"
+          ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Qqfc5iPeMHgM"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
